--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Trinity Capital Information</title>
+    <title>New Age - Start Bootstrap Theme</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link
@@ -79,7 +79,7 @@
             </li>
           </ul>
           <button
-            class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0"
+            class="btn rounded-pill feedbackBtn px-3 mb-2 mb-lg-0"
             data-bs-toggle="modal"
             data-bs-target="#feedbackModal"
           >
@@ -172,7 +172,7 @@
                       style="max-width: 100%; height: 100%"
                     >
                       <source
-                        src="assets/img/Mobile TrinCap-1.mp4"
+                        src="assets/img/My Video-5.mp4"
                         type="video/mp4"
                       />
                     </video>
@@ -251,7 +251,7 @@
                     <i
                       class="bi bi-clipboard-check icon-feature text-gradient d-block mb-3"
                     ></i>
-                    <h3 class="font-alt">In-depth lessons</h3>
+                    <h3 class="font-alt">In-depth lessons (Comming Soon)</h3>
                     <p class="text-muted mb-0">
                       Trinity Capital's built in lessons are made to meet, and
                       exceed state standards, providing students with the most
@@ -327,7 +327,7 @@
                       style="max-width: 100%; height: 100%"
                     >
                       <source
-                        src="assets/img/Mobile TrinCap-1.mp4"
+                        src="assets/img/My Video-5.mp4"
                         type="video/mp4"
                       />
                     </video>
@@ -475,7 +475,7 @@
       <div class="container px-5">
         <div class="text-white-50 small">
           <div class="mb-2">
-            &copy; Trinity Capital 2023. All Rights Reserved.
+            &copy; Ferguson Software Solutions, 2024. All Rights Reserved.
           </div>
         </div>
       </div>
