--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Main CSS File -->
-    <link href="assets/css/main.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
 
     <script async
     src="https://js.stripe.com/v3/buy-button.js">
@@ -896,6 +896,6 @@
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 
     <!-- Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
