--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               data-aos="zoom-out"
             >
               <h1>Welcome to <span>Trinity Capital</span></h1>
-              <p>Our mission? Financial literacy for the future</p>
+              <p>Our mission? Give users control over their finances</p>
               <div class="d-flex">
                 <a href="#about" class="btn-get-started">Get Started</a>
                 <a
@@ -158,8 +158,7 @@
                 </div>
                 <h4><a href="" class="stretched-link">Versatility</a></h4>
                 <p>
-                  Trinity Capital can be used for tracking, planning, or
-                  learning financial literacy concepts
+                  Trinity Capital can be used for tracking, planning, and simulating your finances all in one place.
                 </p>
               </div>
             </div>
@@ -178,8 +177,7 @@
                   <a href="" class="stretched-link">Realistic Experience</a>
                 </h4>
                 <p>
-                  Trinity Capital offers a realistic banking experience to
-                  students, giving them a taste of the real world.
+                  Trinity Capital offers a realistic banking experience to users, allowing them to practice their financial skills in a realistic and safe environment
                 </p>
               </div>
             </div>
@@ -192,11 +190,9 @@
             >
               <div class="service-item position-relative">
                 <div class="icon"><i class="bi bi-broadcast icon"></i></div>
-                <h4><a href="" class="stretched-link">Lesson Included</a></h4>
+                <h4><a href="" class="stretched-link">Sandbox financial environment</a></h4>
                 <p>
-                  Trinity Capital's built in lessons are made to meet, and
-                  exceed financial literacy standards, ensuring you have the
-                  best knowledge in the industry
+                  Trinity Capital offers a sandbox environment, allowing users to experiment with their finances without any real world consequences. 
                 </p>
               </div>
             </div>
@@ -230,11 +226,9 @@
               data-aos-delay="200"
             >
               <div class="about-content ps-0 ps-lg-3">
-                <h3>Spawn a new generation of financially literate citizens</h3>
+                <h3>Simulate. Experiment. Master Your Finances.</h3>
                 <p class="fst-italic">
-                  Trinity Capital as a whole provides the tools and the
-                  accesibility neccesary to empower the next generation with the
-                  money skills they need to be succesful
+                  Trinity Capital as a whole provides a unique and effective way to learn about personal finance. Our app is designed to be used by anyone, regardless of age or experience. We believe that everyone should have access to the tools they need to succeed financially, and we are here to provide that.
                 </p>
                 <ul>
                   <li>
@@ -254,23 +248,16 @@
                     <i class="bi bi-fullscreen-exit"></i>
                     <div>
                       <h4>
-                        Effective knowlesge and tools that truly help young
-                        people
+                       Effective knwoledge transfer, learn by doing
                       </h4>
                       <p>
-                        Our lessons teach real, effective financial literacy
-                        topics not influenced by any financial or government
-                        institution, allowing Trinity Capital to teach concepts
-                        that are actually useful to regular people
+                        Trinity Capital prides itself on its learn by doing approach, allowing users to learn and practice their financial skills through experimentation, trial and error. The lessons users learn through doing are more likely to stick with them than if they were to read a book or watch a video.
                       </p>
                     </div>
                   </li>
                 </ul>
                 <p>
-                  With these in mind, Trinity Capital establishes itself as the
-                  premier financial literacy tool. Its accesbility, learn by
-                  doing approach, and helpful lessons empower citizens with the
-                  tools they need to succeed financially
+                  With these in mind, Trinity Capital establishes itself as the premier financial literacy tool for anyone looking to learn more about personal finance. 
                 </p>
               </div>
             </div>
@@ -530,19 +517,19 @@
             >
               <div class="pricing-item">
                 <h3>Standard</h3>
-                <h4><sup>$</sup>19.99<span> / month</span></h4>
+                <h4><sup>$</sup>5.99<span> / month</span></h4>
                 <ul>
                   <li>Full app</li>
                   <li>Realistic banking simulation</li>
                   <li>Modern UI</li>
-                  <li>Pre-built lessons</li>
+                  <li>Regular updates</li>
                   <li>Runs forever</li>
                 </ul>
                 <div class="btn-wrap">
                   
-                  <stripe-buy-button class = btnTradeWinds
-                  buy-button-id="buy_btn_1Qbn7eJfl0mMUIOaUFVB9Rs3"
-                  publishable-key="pk_test_51OyDknJfl0mMUIOaSuvZbxbAzT86dvu3FQiA2SHbhtLi7q9skPEIcCK03nQpIRdS9CuRRjBy8cs34hptUKE5c1Cd002INXTUa7"
+                  <stripe-buy-button
+                  buy-button-id="buy_btn_1QikkKJfl0mMUIOasonveHdy"
+                  publishable-key="pk_live_51OyDknJfl0mMUIOarBURK8PePeAy9aDrgit5ZDxlD6KtkZRgjVyTQz2XGgygK17PVHBv3c3kcjJUENMYrA0Gpd7g00M4xwq2ob"
                 >
                 </stripe-buy-button>
 
@@ -559,7 +546,7 @@
               <div class="pricing-item">
                 <span class="advanced">Advanced</span>
                 <h3>Ultimate</h3>
-                <h4><sup>$</sup>69.99<span> Upfront</span></h4>
+                <h4><sup>$</sup>9.99<span> / month</span></h4>
                 <ul>
                   <li>Lifetime Access</li>
                   <li>Priority updates</li>
@@ -569,14 +556,40 @@
                 </ul>
                 <div class="btn-wrap">
                   <stripe-buy-button
-  buy-button-id="buy_btn_1Qbn7eJfl0mMUIOaUFVB9Rs3"
-  publishable-key="pk_test_51OyDknJfl0mMUIOaSuvZbxbAzT86dvu3FQiA2SHbhtLi7q9skPEIcCK03nQpIRdS9CuRRjBy8cs34hptUKE5c1Cd002INXTUa7"
->
-</stripe-buy-button>
+                  buy-button-id="buy_btn_1QikmDJfl0mMUIOaOGCvt4Ka"
+                  publishable-key="pk_live_51OyDknJfl0mMUIOarBURK8PePeAy9aDrgit5ZDxlD6KtkZRgjVyTQz2XGgygK17PVHBv3c3kcjJUENMYrA0Gpd7g00M4xwq2ob"
+                >
+                </stripe-buy-button>
                 </div>
               </div>
             </div>
             <!-- End Pricing Item -->
+            <div
+            class="col-lg-4"
+            data-aos="fade-up"
+            data-aos-delay="300"
+          >
+            <div class="pricing-item">
+              <span class="advanced">Advanced</span>
+              <h3>Ultimate</h3>
+              <h4><sup>$</sup>15.99<span> / month</span></h4>
+              <ul>
+                <li>Lifetime Access</li>
+                <li>Priority updates</li>
+                <li>1 month YouTube channel membership</li>
+                <li>Dedicated Discord Server</li>
+                <li>Priority on new lessons</li>
+              </ul>
+              <div class="btn-wrap">
+                <stripe-buy-button
+  buy-button-id="buy_btn_1QiknlJfl0mMUIOaMZa5yzZc"
+  publishable-key="pk_live_51OyDknJfl0mMUIOarBURK8PePeAy9aDrgit5ZDxlD6KtkZRgjVyTQz2XGgygK17PVHBv3c3kcjJUENMYrA0Gpd7g00M4xwq2ob"
+>
+</stripe-buy-button>
+              </div>
+            </div>
+          </div>
+             
           </div>
         </div>
       </section>
