--- a/index.html
+++ b/index.html
@@ -623,24 +623,15 @@
                 </div>
                 <!-- End Faq item-->
 
-                <div class="faq-item">
-                  <h3>Why dont you teach a lot on credit?</h3>
-                  <div class="faq-content">
-                    <p>
-                      The Trinity Capital team acknowledges that credit is a part of the financial world and if handled correctly, will not cause harm to people in the real world. With that said, we do not believe that credit should be used in any context, and any situation where credit can be used, there is always a more viable cash reserve option that doesnt put people at risk of going into debt. We teach credit in a matter of fact way, but do not support its use.
-                    </p>
-                  </div>
-                  <i class="faq-toggle bi bi-chevron-right"></i>
-                </div>
-                <!-- End Faq item-->
+               
 
                 <div class="faq-item">
                   <h3>
-                    What is your lesson content based off of?
+                   Will there be lessons included in the app?
                   </h3>
                   <div class="faq-content">
                     <p>
-                      The framework for our lessons is from the Texas Education Agency's personal financial literacy course TEKS. TEKS are bassically everything youre supposed to learn in a class. We teach these TEKS, with some changes for things such as credit, more effective budgeting, ext. 
+                      Yes there will be! We are working hard to transform Trinity Capital into a full fledged financial literacy tool. We are working on lessons that will teach users about the basics of personal finance, and how to apply them in the real world.
                     </p>
                   </div>
                   <i class="faq-toggle bi bi-chevron-right"></i>
@@ -850,8 +841,7 @@
           <div class="col-lg-4 col-md-12">
             <h4>Follow Us</h4>
             <p>
-              Cras fermentum odio eu feugiat lide par naso tierra videa magna
-              derita valies
+             Check out our YouTube channel for more information on Trinity Capital, and other 
             </p>
             <div class="social-links d-flex">
               <a href=""><i class="bi bi-twitter-x"></i></a>
