--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                 <div class="btn-wrap">
                   
                   <stripe-buy-button
-                  buy-button-id="buy_btn_1QikkKJfl0mMUIOasonveHdy"
+                  buy-button-id="buy_btn_1QjOD5Jfl0mMUIOacsXOCQEi"
                   publishable-key="pk_live_51OyDknJfl0mMUIOarBURK8PePeAy9aDrgit5ZDxlD6KtkZRgjVyTQz2XGgygK17PVHBv3c3kcjJUENMYrA0Gpd7g00M4xwq2ob"
                 >
                 </stripe-buy-button>
@@ -550,13 +550,13 @@
                 <ul>
                   <li>Lifetime Access</li>
                   <li>Priority updates</li>
-                
+                  <li>1 month YouTube channel membership</li>
                   <li>Dedicated Discord Server</li>
                   <li>All other features</li>
                 </ul>
                 <div class="btn-wrap">
                   <stripe-buy-button
-                  buy-button-id="buy_btn_1QikmDJfl0mMUIOaOGCvt4Ka"
+                  buy-button-id="buy_btn_1QjOEoJfl0mMUIOabHonhdh7"
                   publishable-key="pk_live_51OyDknJfl0mMUIOarBURK8PePeAy9aDrgit5ZDxlD6KtkZRgjVyTQz2XGgygK17PVHBv3c3kcjJUENMYrA0Gpd7g00M4xwq2ob"
                 >
                 </stripe-buy-button>
@@ -582,7 +582,7 @@
               </ul>
               <div class="btn-wrap">
                 <stripe-buy-button
-  buy-button-id="buy_btn_1QiknlJfl0mMUIOaMZa5yzZc"
+  buy-button-id="buy_btn_1QjOFzJfl0mMUIOa1MWsffpK"
   publishable-key="pk_live_51OyDknJfl0mMUIOarBURK8PePeAy9aDrgit5ZDxlD6KtkZRgjVyTQz2XGgygK17PVHBv3c3kcjJUENMYrA0Gpd7g00M4xwq2ob"
 >
 </stripe-buy-button>
