--- a/index.html
+++ b/index.html
@@ -771,13 +771,13 @@
                 <i class="bi bi-chevron-right"></i> <a href="#">Services</a>
               </li>
               <li>
-                <i class="bi bi-chevron-right"></i>
-                <a href="#">Terms of service</a>
+                <i class="bi bi-chevron-right"></i> <a id="terms-btn" href="#">Terms of Service</a>
+              </li>
+              <li>
+                <i class="bi bi-chevron-right"></i> <a id="privacy-btn" href="#">Privacy Policy</a>
               </li>
             </ul>
           </div>
-
-         
 
           <div class="col-lg-4 col-md-12">
             <h4>Follow Us</h4>
