--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           </p>
         </div>
         <!-- End Section Title -->
-
+        ````````````````
         <div class="container">
           <div class="row gy-3">
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -771,10 +771,10 @@
                 <i class="bi bi-chevron-right"></i> <a href="#">Services</a>
               </li>
               <li>
-                <i class="bi bi-chevron-right"></i> <a id="terms-btn" href="#">Terms of Service</a>
+                <i class="bi bi-chevron-right"></i> <a id="terms-btn" href="terms-of-service.html">Terms of Service</a>
               </li>
               <li>
-                <i class="bi bi-chevron-right"></i> <a id="privacy-btn" href="#">Privacy Policy</a>
+                <i class="bi bi-chevron-right"></i> <a id="privacy-btn" href="privacy-policy.html">Privacy Policy</a>
               </li>
             </ul>
           </div>
