--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Stripe Integration -->
-    <script src="https://js.stripe.com/v3/" async></script>
+    <script src="https://js.stripe.com/v3/" defer></script>
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
