--- a/index.html
+++ b/index.html
@@ -529,8 +529,9 @@
                 <h4><sup>$</sup>15<span> / student</span></h4>
                 <ul>
                   <li>Full app access for students</li>
-                  <li>Classroom management tools</li>
+                  <li>Realistic Simulation</li>
                   <li>Access to all lessons</li>
+                  <li>built-in financial analytics</li>
                 </ul>
                 <div class="mb-3">
                   <label for="student-qty" class="form-label">Number of Student Licenses</label>
@@ -545,9 +546,12 @@
                 <h3>Teacher License</h3>
                 <h4><sup>$</sup>60<span> / teacher</span></h4>
                 <ul>
-                  <li>Full app access for teachers</li>
-                  <li>Admin dashboard</li>
-                  <li>Priority support</li>
+                  <li>Full feature teacher dashboard</li>
+                  <li>Class health and grading analytics</li>
+                  <li>Instant messaging support</li>
+                  <li>Pre-made lessons and custom lesson creation</li>
+                  <li>Email capability for parents and staff members</li>
+                  <li><strong>Comming soon</strong>Custom lesson sharing platform</li>
                 </ul>
                 <div class="mb-3">
                   <label for="teacher-qty" class="form-label">Number of Teacher Licenses</label>
@@ -564,6 +568,7 @@
                 <ul>
                   <li><strong>Unlimited</strong> student licenses</li>
                   <li><strong>Unlimited</strong> teacher licenses</li>
+                  <li><strong>Full-access</strong> to features</li>
                 </ul>
                 <button 
                   type="button" 
