--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               data-aos="zoom-out"
             >
               <h1>Welcome to <span>Trinity Capital</span></h1>
-              <p>Our mission? Give users control over their finances</p>
+              <p>Empowering students with essential financial literacy skills through realistic banking simulation</p>
               <div class="d-flex">
                 <a href="#about" class="btn-get-started">Get Started</a>
                 <a
@@ -191,11 +191,10 @@
               data-aos-delay="100"
             >
               <div class="service-item position-relative">
-                <div class="icon"><i class="bi bi-activity icon"></i></div>
-                <h4><a href="" class="stretched-link">Accesibility</a></h4>
+                <div class="icon"><i class="bi bi-mortarboard icon"></i></div>
+                <h4><a href="" class="stretched-link">Educational Focus</a></h4>
                 <p>
-                  Trinity Capital can be used on any device with an internet
-                  connection at any time
+                  Designed specifically for classrooms to teach students essential financial literacy skills through hands-on simulation
                 </p>
               </div>
             </div>
@@ -208,11 +207,11 @@
             >
               <div class="service-item position-relative">
                 <div class="icon">
-                  <i class="bi bi-bounding-box-circles icon"></i>
+                  <i class="bi bi-bank icon"></i>
                 </div>
-                <h4><a href="" class="stretched-link">Versatility</a></h4>
+                <h4><a href="" class="stretched-link">Banking Simulation</a></h4>
                 <p>
-                  Trinity Capital can be used for tracking, planning, and simulating your finances all in one place.
+                  Experience realistic banking operations including deposits, withdrawals, transfers, and account management in a safe learning environment
                 </p>
               </div>
             </div>
@@ -225,13 +224,13 @@
             >
               <div class="service-item position-relative">
                 <div class="icon">
-                  <i class="bi bi-calendar4-week icon"></i>
+                  <i class="bi bi-people icon"></i>
                 </div>
                 <h4>
-                  <a href="" class="stretched-link">Realistic Experience</a>
+                  <a href="" class="stretched-link">Classroom Management</a>
                 </h4>
                 <p>
-                  Trinity Capital offers a realistic banking experience to users, allowing them to practice their financial skills in a realistic and safe environment
+                  Teachers get comprehensive dashboard tools to monitor student progress, assign lessons, and track learning outcomes across their classes
                 </p>
               </div>
             </div>
@@ -243,10 +242,10 @@
               data-aos-delay="400"
             >
               <div class="service-item position-relative">
-                <div class="icon"><i class="bi bi-broadcast icon"></i></div>
-                <h4><a href="" class="stretched-link">Sandbox financial environment</a></h4>
+                <div class="icon"><i class="bi bi-shield-check icon"></i></div>
+                <h4><a href="" class="stretched-link">Risk-Free Learning</a></h4>
                 <p>
-                  Trinity Capital offers a sandbox environment, allowing users to experiment with their finances without any real world consequences. 
+                  Students can make financial mistakes and learn from them without real-world consequences, building confidence for future decisions
                 </p>
               </div>
             </div>
@@ -280,21 +279,19 @@
               data-aos-delay="200"
             >
               <div class="about-content ps-0 ps-lg-3">
-                <h3>Simulate. Experiment. Master Your Finances.</h3>
+                <h3>Learn. Practice. Master Financial Skills.</h3>
                 <p class="fst-italic">
-                  Trinity Capital as a whole provides a unique and effective way to learn about personal finance. Our app is designed to be used by anyone, regardless of age or experience. We believe that everyone should have access to the tools they need to succeed financially, and we are here to provide that.
+                  Trinity Capital provides schools with a comprehensive financial literacy education platform. Designed specifically for classroom use, our banking simulation gives students hands-on experience with real-world financial concepts in a safe, controlled environment where mistakes become valuable learning opportunities.
                 </p>
                 <ul>
                   <li>
                     <i class="bi bi-diagram-3"></i>
                     <div>
                       <h4>
-                        An intuitive solution to the financial literacy crisis
+                        Addressing the financial literacy gap in education
                       </h4>
                       <p>
-                        Trinity Capital tackles financial literacy head on,
-                        allowing users to practice the skills they learn in a
-                        safe way
+                        Trinity Capital bridges the gap between theoretical financial concepts and practical application, giving students the confidence to make informed financial decisions
                       </p>
                     </div>
                   </li>
@@ -302,16 +299,16 @@
                     <i class="bi bi-fullscreen-exit"></i>
                     <div>
                       <h4>
-                       Effective knwoledge transfer, learn by doing
+                       Experiential learning that builds lasting knowledge
                       </h4>
                       <p>
-                        Trinity Capital prides itself on its learn by doing approach, allowing users to learn and practice their financial skills through experimentation, trial and error. The lessons users learn through doing are more likely to stick with them than if they were to read a book or watch a video.
+                        Students learn by doing through our realistic banking simulation. This hands-on approach creates deeper understanding and retention compared to traditional textbook-based financial education methods.
                       </p>
                     </div>
                   </li>
                 </ul>
                 <p>
-                  With these in mind, Trinity Capital establishes itself as the premier financial literacy tool for anyone looking to learn more about personal finance. 
+                  Trinity Capital is the comprehensive solution schools need to prepare students for financial success, combining educational rigor with engaging, practical experience.
                 </p>
               </div>
             </div>
@@ -382,8 +379,8 @@
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <h3>Sarah Mitchell</h3>
+                  <h4>High School Economics Teacher</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i
@@ -394,10 +391,7 @@
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
                     <span
-                      >Export tempor illum tamen malis malis eram quae irure
-                      esse labore quem cillum quid cillum eram malis quorum
-                      velit fore eram velit sunt aliqua noster fugiat irure amet
-                      legam anim culpa.</span
+                      >Trinity Capital has transformed how I teach financial literacy. My students are actually excited about learning banking concepts because they get to practice in a realistic simulation. The engagement levels are incredible.</span
                     >
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
@@ -412,8 +406,8 @@
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
+                  <h3>Michael Rodriguez</h3>
+                  <h4>School Administrator</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i
@@ -424,10 +418,7 @@
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
                     <span
-                      >Enim nisi quem export duis labore cillum quae magna enim
-                      sint quorum nulla quem veniam duis minim tempor labore
-                      quem eram duis noster aute amet eram fore quis sint
-                      minim.</span
+                      >Since implementing Trinity Capital, we've seen a dramatic improvement in our students' understanding of personal finance. Parents are amazed at the financial conversations their kids are having at home.</span
                     >
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
@@ -442,8 +433,8 @@
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
+                  <h3>Lisa Chen</h3>
+                  <h4>Financial Literacy Coordinator</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i
@@ -454,10 +445,7 @@
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
                     <span
-                      >Fugiat enim eram quae cillum dolore dolor amet nulla
-                      culpa multos export minim fugiat minim velit minim dolor
-                      enim duis veniam ipsum anim magna sunt elit fore quem
-                      dolore labore illum veniam.</span
+                      >Trinity Capital perfectly bridges the gap between theory and practice. Students actually understand banking concepts now because they've experienced them firsthand in the simulation.</span
                     >
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
@@ -472,8 +460,8 @@
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
+                  <h3>David Thompson</h3>
+                  <h4>Curriculum Director</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i
@@ -484,10 +472,7 @@
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
                     <span
-                      >Quis quorum aliqua sint quem legam fore sunt eram irure
-                      aliqua veniam tempor noster veniam enim culpa labore duis
-                      sunt culpa nulla illum cillum fugiat legam esse veniam
-                      culpa fore nisi cillum quid.</span
+                      >This platform has revolutionized our financial education program. Teachers love the comprehensive dashboard, and students are finally engaged with financial literacy concepts.</span
                     >
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
@@ -529,9 +514,8 @@
                 <h4><sup>$</sup>15<span> / student</span></h4>
                 <ul>
                   <li>Full app access for students</li>
-                  <li>Realistic Simulation</li>
+                  <li>Classroom management tools</li>
                   <li>Access to all lessons</li>
-                  <li>built-in financial analytics</li>
                 </ul>
                 <div class="mb-3">
                   <label for="student-qty" class="form-label">Number of Student Licenses</label>
@@ -546,12 +530,9 @@
                 <h3>Teacher License</h3>
                 <h4><sup>$</sup>60<span> / teacher</span></h4>
                 <ul>
-                  <li>Full feature teacher dashboard</li>
-                  <li>Class health and grading analytics</li>
-                  <li>Instant messaging support</li>
-                  <li>Pre-made lessons and custom lesson creation</li>
-                  <li>Email capability for parents and staff members</li>
-                  <li><strong>Comming soon</strong>Custom lesson sharing platform</li>
+                  <li>Full app access for teachers</li>
+                  <li>Admin dashboard</li>
+                  <li>Priority support</li>
                 </ul>
                 <div class="mb-3">
                   <label for="teacher-qty" class="form-label">Number of Teacher Licenses</label>
@@ -568,7 +549,6 @@
                 <ul>
                   <li><strong>Unlimited</strong> student licenses</li>
                   <li><strong>Unlimited</strong> teacher licenses</li>
-                  <li><strong>Full-access</strong> to features</li>
                 </ul>
                 <button 
                   type="button" 
