--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                   <i class="bi bi-envelope flex-shrink-0"></i>
                   <div>
                     <h3>Email Us</h3>
-                    <p>trinitycapitalsim@gmail.com</p>
+                    <p>jakob-ferguson@trinity-capital.net</p>
                   </div>
                 </div>
                 <!-- End Info Item -->
