--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
               <p>123 Sesame St.</p>
               <p>New York City, NY 11111</p>
               
-              <p><strong>Email:</strong> <span>trinitycapitalsim@gmail.com</span></p>
+              <p><strong>Email:</strong> <span>jakobferguson@trinity-capital.net</span></p>
             </div>
           </div>
 
