--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                   <i class="bi bi-geo-alt flex-shrink-0"></i>
                   <div>
                     <h3>Address</h3>
-                    <p>123 Sesame st, New York City, NY 11111</p>
+                    <p>PO Box: PO Box 1111., Keller TX, 76244</p>
                   </div>
                 </div>
                 <!-- End Info Item -->
