--- a/index.html
+++ b/index.html
@@ -627,8 +627,8 @@
               <span class="sitename">Trinity Capital</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>123 Sesame St.</p>
-              <p>New York City, NY 11111</p>
+              <p>PO Box: PO Box 1111., Keller TX, 76244</p>
+              <p>Keller, TX 76244</p>
               
               <p><strong>Email:</strong> <span>jakobferguson@trinity-capital.net</span></p>
             </div>
