--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,234 +1,100 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terms of Service - Trinity Capital</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        margin: 40px;
-      }
-      h1,
-      h2 {
-        color: #2c3e50;
-      }
-      p {
-        margin-bottom: 15px;
-      }
-      ul {
-        margin-left: 20px;
-      }
-      .gmail-section {
-        background-color: #f8f9fa;
-        padding: 20px;
-        border-left: 4px solid #4285f4;
-        margin: 20px 0;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Terms of Service</h1>
-    <p>Last Updated: 07/03/2025</p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Terms of Service - Trinity Capital EdTech</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1, h2, h3 {
+      color: #1a3b69;
+    }
+    h1 {
+      margin-top: 0;
+    }
+    a {
+      color: #1a3b69;
+    }
+    section {
+      margin-bottom: 30px;
+    }
+    ul {
+      margin-top: 0;
+    }
+  </style>
+</head>
+<body>
+  <h1>Terms of Service</h1>
+  <p>Effective Date: January 19, 2026</p>
 
+  <section>
     <h2>1. Acceptance of Terms</h2>
-    <p>
-      By accessing and using our financial literacy application ("Trinity
-      Capital"), you agree to be bound by these Terms of Service ("Terms"). If
-      you do not agree to these Terms, you may not use the App.
-    </p>
+    <p>By accessing or using the Trinity Capital educational software (the "Service"), you agree to comply with these Terms of Service ("Terms"). These Terms apply to all users, including schools, teachers, and students. If you do not agree, you must not use the Service.</p>
+  </section>
 
-    <h2>2. Description of the App</h2>
-    <p>
-      The App is designed to provide financial literacy resources to students
-      and educators. It includes lesson planning tools, email communication
-      features, reporting tools, and more.
-    </p>
+  <section>
+    <h2>2. Purpose of the Service</h2>
+    <p>The Service is an educational platform designed to teach students financial literacy through interactive lessons, simulations, and exercises. All financial data in the Service is simulated and used for learning purposes only.</p>
+  </section>
 
-    <h2>3. Eligibility</h2>
-    <p>
-      Use of the App is limited to authorized school personnel, educators, and
-      administrators who must be 18 years of age or older. When the App is used
-      with students under 18, schools are responsible for obtaining any
-      necessary parental consent and ensuring compliance with applicable laws
-      regarding minors' data.
-    </p>
-
-    <h2>4. Account Registration</h2>
-    <p>
-      To access certain features, you may need to register an account. You agree
-      to provide accurate information and to update it as necessary.
-    </p>
-
-    <h2>5. Payments and Pricing</h2>
-    <p>
-      The App is offered as a one-time purchase with perpetual access. Current
-      pricing is available during the registration process. We reserve the right
-      to increase the purchase price for new customers as we onboard additional
-      schools, with the goal of reaching our target pricing tier. Existing
-      customers who have already purchased access will not be subject to price
-      increases and will retain their perpetual access rights.
-    </p>
-
-    <h2>6. Use of the App</h2>
+  <section>
+    <h2>3. Definitions</h2>
+    <p>For the purposes of these Terms:</p>
     <ul>
-      <li>
-        You agree to use the App only for lawful and educational purposes.
-      </li>
-      <li>
-        You will not attempt to reverse-engineer, modify, or hack the App.
-      </li>
-      <li>
-        You will not use the App to send spam or unauthorized communications.
-      </li>
-      <li>
-        <strong
-          >You agree to use Gmail API integration only for sending emails from
-          your authorized school email account.</strong
-        >
-      </li>
-      <li>
-        <strong
-          >You will not attempt to access, read, or modify emails beyond the
-          sending functionality provided.</strong
-        >
-      </li>
+      <li><strong>Student Data:</strong> Any information directly related to a student maintained by the Service on behalf of a School, including names, grades, lesson progress, and simulated financial data (accounts, transactions, paychecks, bills, budgets).</li>
+      <li><strong>School:</strong> Any public school, district, or educational institution authorized to use the Service.</li>
+      <li><strong>Teacher/Administrator:</strong> School personnel authorized to manage classes and students within the Service.</li>
     </ul>
+  </section>
 
-    <h2>7. Data Privacy</h2>
-    <p>
-      We are committed to protecting student privacy and educational data. The
-      App is designed to be FERPA-compliant and collects only data necessary for
-      educational purposes. Detailed information about our data practices,
-      retention periods, and security measures is available in our Privacy
-      Policy. Schools maintain ownership and control over their educational
-      data.
-    </p>
-
-    <div class="gmail-section">
-      <h2>8. Email Communication and Gmail API</h2>
-      <p>
-        The App allows users to send emails through Gmail API integration. By
-        using this feature, you agree that:
-      </p>
-      <ul>
-        <li>
-          You will use email communication features responsibly and in
-          accordance with your school's policies.
-        </li>
-        <li>
-          <strong
-            >You authorize the App to send emails on your behalf from your
-            school email address.</strong
-          >
-        </li>
-        <li>
-          <strong
-            >The App will not read, store, or access your existing
-            emails.</strong
-          >
-        </li>
-        <li>
-          <strong
-            >You can revoke Gmail API access at any time through your Google
-            account settings.</strong
-          >
-        </li>
-        <li>
-          <strong
-            >You are responsible for the content of emails sent through the
-            platform.</strong
-          >
-        </li>
-        <li>
-          All email communications must comply with applicable laws and your
-          institution's policies.
-        </li>
-      </ul>
-    </div>
-
-    <h2>9. Intellectual Property</h2>
-    <p>
-      All content, features, and software of the App are the property of
-      FERGUSON SOFTWARE SOLUTIONS, LLC and protected under applicable laws. You
-      may not reproduce, distribute, or create derivative works from our content
-      without explicit permission.
-    </p>
-
-    <h2>10. Termination</h2>
-    <p>
-      We reserve the right to suspend or terminate access for violation of these
-      Terms with reasonable notice when possible. Upon termination:
-    </p>
+  <section>
+    <h2>4. User Responsibilities</h2>
     <ul>
-      <li>
-        Schools may request export of their data within 30 days, after which
-        data may be deleted in accordance with our data retention policies.
-      </li>
-      <li>
-        <strong
-          >Gmail API access tokens will be automatically invalidated.</strong
-        >
-      </li>
-      <li>
-        <strong
-          >Users should revoke Gmail API permissions through their Google
-          account settings.</strong
-        >
-      </li>
+      <li>Schools must ensure only authorized personnel have access to Student Data.</li>
+      <li>Teachers must supervise student use of the Service and protect student login credentials.</li>
+      <li>Users agree not to attempt to access other students' accounts or data.</li>
+      <li>Students must use the Service solely for educational purposes.</li>
     </ul>
+  </section>
 
-    <h2>11. Changes to These Terms</h2>
-    <p>
-      We may update these Terms occasionally. Continued use of the App
-      constitutes your acceptance of any changes.
-    </p>
+  <section>
+    <h2>5. Privacy and Data Protection</h2>
+    <p>Trinity Capital acts as a School Official under FERPA and complies with applicable student privacy laws, including COPPA where relevant. The Service:</p>
+    <ul>
+      <li>Encrypts Student Data at rest and in transit.</li>
+      <li>Stores only the minimum information necessary for educational purposes.</li>
+      <li>Does not collect real financial, government, or health information.</li>
+      <li>Logs and audits access to Student Data for security and compliance purposes.</li>
+    </ul>
+  </section>
 
-    <h2>12. Disclaimer of Warranties</h2>
-    <p>
-      The App is provided "as is" without warranty of any kind. We do not
-      guarantee uninterrupted access or error-free performance.
-    </p>
+  <section>
+    <h2>6. Intellectual Property</h2>
+    <p>All content, software, and materials provided through the Service are the property of Trinity Capital or its licensors. Schools and users are granted a limited, non-exclusive license to use the Service for educational purposes only.</p>
+  </section>
 
-    <h2>13. Limitation of Liability</h2>
-    <p>
-      We are not liable for any indirect, incidental, or consequential damages
-      resulting from your use of the App.
-    </p>
+  <section>
+    <h2>7. Restrictions</h2>
+    <ul>
+      <li>No redistribution, resale, or commercial use of the Service or Student Data.</li>
+      <li>No attempts to bypass security, copy, or extract any proprietary content.</li>
+      <li>No sharing of login credentials or accounts with unauthorized users.</li>
+    </ul>
+  </section>
 
-    <h2>14. Third-Party Services</h2>
-    <p>
-      The App integrates with third-party services including Google's Gmail API.
-      Your use of these services is also subject to their respective terms of
-      service and privacy policies. We are not responsible for the availability,
-      functionality, or policies of third-party services.
-    </p>
+  <section>
+    <h2>8. Disclaimer and Limitation of Liability</h2>
+    <p>The Service is provided "as is" for educational purposes. Trinity Capital makes no guarantees regarding grades, simulation outcomes, or academic results. While the Service employs robust security measures, Trinity Capital is not liable for any indirect or minimal harm arising from simulated data exposure. Direct breaches of real Student Data will be addressed according to FERPA and applicable laws.</p>
+  </section>
 
-    <h2>15. Governing Law</h2>
-    <p>
-      These Terms are governed by the laws of the state of Texas. Any disputes
-      shall be resolved in the appropriate courts of that jurisdiction.
-    </p>
-
-    <h2>16. Accessibility</h2>
-    <p>
-      We strive to ensure our App is accessible to users with disabilities and
-      aim to comply with applicable accessibility standards including Section
-      508 and WCAG guidelines.
-    </p>
-
-    <h2>17. Service Availability</h2>
-    <p>
-      While we strive to provide reliable service, we do not guarantee
-      uninterrupted access. We will provide reasonable notice of planned
-      maintenance when possible.
-    </p>
-
-    <h2>18. Contact</h2>
-    <p>
-      If you have any questions about these Terms, please contact us at
-      trinitycapitalsim@gmail.com.
-    </p>
-  </body>
-</html>
+  <section>
+    <h2>9. Termination</h2>
+    <p>Trinity Capital may suspend or terminate access for any user violating these Terms. Schools may terminate their account at any time; upon termination, Trinity Capital will return or securely delete
