--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,207 +1,129 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - Trinity Capital</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        margin: 40px;
-      }
-      h1,
-      h2 {
-        color: #2c3e50;
-      }
-      p {
-        margin-bottom: 15px;
-      }
-      ul {
-        margin-left: 20px;
-      }
-      .gmail-section {
-        background-color: #f8f9fa;
-        padding: 20px;
-        border-left: 4px solid #4285f4;
-        margin: 20px 0;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Privacy Policy</h1>
-    <p>Last Updated: 07/03/2025</p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy - Trinity Capital EdTech</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1, h2, h3 {
+      color: #1a3b69;
+    }
+    h1 {
+      margin-top: 0;
+    }
+    a {
+      color: #1a3b69;
+    }
+    section {
+      margin-bottom: 30px;
+    }
+    ul {
+      margin-top: 0;
+    }
+  </style>
+</head>
+<body>
+  <h1>Privacy Policy</h1>
+  <p>Effective Date: January 19, 2026</p>
 
+  <section>
     <h2>1. Introduction</h2>
-    <p>
-      This Privacy Policy describes how FERGUSON SOFTWARE SOLUTIONS, LLC ("we,"
-      "our," or "us") collects, uses, and protects personal information in
-      connection with our financial literacy application ("Trinity Capital").
-    </p>
+    <p>Trinity Capital (“we,” “our,” or “the Service”) is committed to protecting the privacy and security of the students and schools that use our educational platform. This Privacy Policy explains how we collect, store, and use Student Data, and the measures we take to safeguard it.</p>
+  </section>
 
-    <h2>2. Information We Collect</h2>
+  <section>
+    <h2>2. Definitions</h2>
+    <p>For the purposes of this Privacy Policy:</p>
     <ul>
-      <li>
-        <strong>Account Information:</strong> Name, email address, school
-        affiliation, and role.
-      </li>
-      <li>
-        <strong>Authentication Data:</strong> Encrypted OAuth tokens that allow
-        teachers to send emails from their school email addresses through our
-        platform.
-      </li>
-      <li>
-        <strong>Usage Data:</strong> Basic platform usage metrics for service
-        improvement (pages accessed, login times).
-      </li>
-      <li>
-        <strong>Student Data (if applicable):</strong> Only minimal information
-        needed to support lesson delivery and reporting features.
-      </li>
+      <li><strong>Student Data:</strong> Information directly related to a student maintained by the Service on behalf of a School, including names, grades, lesson progress, and simulated financial data such as accounts, transactions, paychecks, bills, and budgets.</li>
+      <li><strong>School:</strong> Any public school, district, or educational institution authorized to use the Service.</li>
+      <li><strong>Teacher/Administrator:</strong> School personnel authorized to manage classes and students within the Service.</li>
     </ul>
+  </section>
 
-    <div class="gmail-section">
-      <h2>3. Gmail API Integration</h2>
-      <ul>
-        <li>
-          We use Google's Gmail API solely to enable teachers to send emails
-          from their school email addresses.
-        </li>
-        <li>
-          <strong
-            >We do not read, store, or analyze email content, subject lines, or
-            message bodies.</strong
-          >
-        </li>
-        <li>Email delivery is handled directly by Gmail's secure servers.</li>
-        <li>
-          We store only encrypted authentication tokens necessary for this
-          functionality.
-        </li>
-        <li>Teachers maintain full control over their email communications.</li>
-        <li>
-          OAuth tokens are automatically deleted when users revoke access
-          through their Google account settings.
-        </li>
-      </ul>
-    </div>
-
-    <h2>4. How We Use Your Information</h2>
+  <section>
+    <h2>3. Data Collection</h2>
+    <p>We collect only the information necessary to provide educational services:</p>
     <ul>
-      <li>To provide and improve the App experience.</li>
-      <li>
-        To authenticate teachers with their school email accounts for secure
-        email sending.
-      </li>
-      <li>
-        To enable teachers to send emails from their school email addresses
-        through our platform.
-      </li>
-      <li>To respond to user inquiries and provide technical support.</li>
-      <li>To meet legal and educational compliance standards (e.g., FERPA).</li>
+      <li>Student names, grades, lesson progress, and completion data.</li>
+      <li>Simulated financial data created within the Service (e.g., fake checking accounts, paychecks, bills, budgets) strictly for educational purposes.</li>
+      <li>Teacher and school identifiers for class management.</li>
     </ul>
+    <p>We do not collect real financial information, social security numbers, or health data.</p>
+  </section>
 
-    <h2>5. Sharing and Disclosure</h2>
-    <p>
-      We do not sell personal data. Information is shared only under these
-      circumstances:
-    </p>
+  <section>
+    <h2>4. Use of Student Data</h2>
+    <p>Student Data is used solely to:</p>
     <ul>
-      <li>With your school or district for administrative purposes.</li>
-      <li>
-        With trusted service providers that help us operate the App (e.g.,
-        MongoDB database hosting, Railway cloud infrastructure).
-      </li>
-      <li>As required by law or to protect rights and safety.</li>
-      <li>
-        <strong
-          >We do not share email content or communications data with any third
-          parties.</strong
-        >
-      </li>
+      <li>Deliver lessons and interactive simulations.</li>
+      <li>Track student progress and grades.</li>
+      <li>Provide teachers with tools to monitor classroom engagement.</li>
+      <li>Generate reports for educational purposes only.</li>
     </ul>
+  </section>
 
-    <h2>6. Data Retention</h2>
-    <p>
-      We retain data only as long as necessary to provide the service or as
-      required by law. Users may request deletion of their account and
-      associated data at any time.
-    </p>
+  <section>
+    <h2>5. Data Storage and Security</h2>
+    <p>We take appropriate technical and organizational measures to protect Student Data, including:</p>
     <ul>
-      <li>
-        <strong
-          >OAuth tokens are automatically deleted when users revoke access
-          through their Google account settings.</strong
-        >
-      </li>
-      <li><strong>No email content is stored on our servers.</strong></li>
+      <li>Encrypted storage of Student Data at rest using MongoDB Atlas.</li>
+      <li>Encrypted transmission of data using TLS 1.2+.</li>
+      <li>Role-based access control to ensure only authorized teachers, administrators, and personnel can access relevant Student Data.</li>
+      <li>Logging and auditing access to Student Data for compliance purposes.</li>
+      <li>Secure management of credentials, API keys, and environment variables via Railway.</li>
     </ul>
+  </section>
 
-    <h2>7. Security</h2>
-    <p>
-      We implement industry-standard safeguards to protect data from
-      unauthorized access, loss, misuse, or alteration. However, no method is
-      100% secure.
-    </p>
+  <section>
+    <h2>6. Data Sharing</h2>
+    <p>We do not sell, trade, or otherwise share Student Data outside of the intended educational use. Student Data may be shared with:</p>
     <ul>
-      <li>All OAuth tokens are encrypted both in transit and at rest.</li>
-      <li>Database connections use encryption and secure protocols.</li>
-      <li>
-        Our infrastructure is hosted on secure, compliant cloud platforms.
-      </li>
+      <li>Teachers and administrators authorized by the School to manage classes.</li>
+      <li>Third-party service providers only as necessary to operate the Service, under contractual agreements ensuring FERPA compliance.</li>
     </ul>
+  </section>
 
-    <h2>8. Student Data and FERPA Compliance</h2>
-    <p>
-      We comply with the Family Educational Rights and Privacy Act (FERPA).
-      Student data is handled only for legitimate educational purposes and never
-      for commercial gain.
-    </p>
+  <section>
+    <h2>7. Data Retention</h2>
+    <p>Student Data is retained only as long as necessary to provide educational services. Upon request or at the end of the School’s use of the Service, Student Data will be returned to the School or securely deleted.</p>
+  </section>
 
-    <h2>9. Your Choices</h2>
+  <section>
+    <h2>8. Student Rights</h2>
+    <p>Schools and students have the following rights:</p>
     <ul>
-      <li>
-        You may review, update, or delete your personal information at any time
-        by contacting us.
-      </li>
-      <li>
-        You may opt out of non-essential communications through your account
-        settings.
-      </li>
-      <li>
-        <strong
-          >You can revoke Gmail API access at any time through your Google
-          account settings.</strong
-        >
-      </li>
-      <li>
-        <strong
-          >Revoking access will prevent email sending through our platform but
-          will not affect your Google account.</strong
-        >
-      </li>
+      <li>Access to their Student Data through authorized accounts.</li>
+      <li>Request corrections or deletions of inaccurate or outdated data.</li>
+      <li>Request information about how their data is stored and protected.</li>
     </ul>
+  </section>
 
-    <h2>10. Data Subject Rights</h2>
-    <p>You have the right to:</p>
-    <ul>
-      <li>Access the personal information we have about you</li>
-      <li>Correct any inaccurate information</li>
-      <li>Delete your account and associated data</li>
-      <li>Revoke OAuth permissions at any time</li>
-      <li>Receive a copy of your data in a portable format</li>
-    </ul>
+  <section>
+    <h2>9. Breach Notification</h2>
+    <p>In the unlikely event of a confirmed data breach, Trinity Capital will promptly notify the affected School in accordance with FERPA, Texas law, and applicable regulations, typically within 48 hours of discovery.</p>
+  </section>
 
-    <h2>11. Changes to This Privacy Policy</h2>
-    <p>
-      We may update this policy periodically. Continued use of the App after
-      changes are posted constitutes your acceptance of the revised terms.
-    </p>
+  <section>
+    <h2>10. Changes to this Privacy Policy</h2>
+    <p>We may update this Privacy Policy from time to time. Schools will be notified of significant changes. Continued use of the Service constitutes acceptance of the updated Privacy Policy.</p>
+  </section>
 
-    <h2>12. Contact Us</h2>
-    <p>
-      If you have any questions or concerns about this Privacy Policy, please
-      contact us at trinitycapitalsim@gmail.com.
-    </p>
-  </body>
+  <section>
+    <h2>11. Contact Us</h2>
+    <p>If you have questions or concerns about this Privacy Policy or Student Data, please contact:</p>
+    <p><strong>Trinity Capital</strong><br>
+    Email: <a href="mailto:support@trinity-capital.net">support@trinity-capital.net</a></p>
+  </section>
+
+</body>
 </html>
