--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms of Service - Trinity Capital EdTech</title>
+  <title>Terms of Service - Trinity Capital</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -37,12 +37,12 @@
 
   <section>
     <h2>1. Acceptance of Terms</h2>
-    <p>By accessing or using the Trinity Capital educational software (the "Service"), you agree to comply with these Terms of Service ("Terms"). These Terms apply to all users, including schools, teachers, and students. If you do not agree, you must not use the Service.</p>
+    <p>By accessing or using the educational software <strong>Trinity Capital</strong> (the "Service"), you agree to comply with these Terms of Service ("Terms"). These Terms apply to all users, including schools, teachers, and students. If you do not agree, you must not use the Service. The Service is provided by <strong>FERGUSON SOFTWARE SOLUTIONS</strong> (“we,” “us,” or “our”).</p>
   </section>
 
   <section>
     <h2>2. Purpose of the Service</h2>
-    <p>The Service is an educational platform designed to teach students financial literacy through interactive lessons, simulations, and exercises. All financial data in the Service is simulated and used for learning purposes only.</p>
+    <p><strong>Trinity Capital</strong> is an educational platform designed to teach students financial literacy through interactive lessons, simulations, and exercises. All financial data in the Service is simulated and used for learning purposes only. The Service is offered and maintained by <strong>FERGUSON SOFTWARE SOLUTIONS</strong>.</p>
   </section>
 
   <section>
@@ -67,7 +67,7 @@
 
   <section>
     <h2>5. Privacy and Data Protection</h2>
-    <p>Trinity Capital acts as a School Official under FERPA and complies with applicable student privacy laws, including COPPA where relevant. The Service:</p>
+    <p><strong>FERGUSON SOFTWARE SOLUTIONS</strong> acts as a School Official under FERPA and complies with applicable student privacy laws, including COPPA where relevant. The Service:</p>
     <ul>
       <li>Encrypts Student Data at rest and in transit.</li>
       <li>Stores only the minimum information necessary for educational purposes.</li>
@@ -78,7 +78,7 @@
 
   <section>
     <h2>6. Intellectual Property</h2>
-    <p>All content, software, and materials provided through the Service are the property of Trinity Capital or its licensors. Schools and users are granted a limited, non-exclusive license to use the Service for educational purposes only.</p>
+    <p>All content, software, and materials provided through <strong>Trinity Capital</strong> are the property of <strong>FERGUSON SOFTWARE SOLUTIONS</strong> or its licensors. Schools and users are granted a limited, non-exclusive license to use the Service for educational purposes only.</p>
   </section>
 
   <section>
@@ -92,9 +92,30 @@
 
   <section>
     <h2>8. Disclaimer and Limitation of Liability</h2>
-    <p>The Service is provided "as is" for educational purposes. Trinity Capital makes no guarantees regarding grades, simulation outcomes, or academic results. While the Service employs robust security measures, Trinity Capital is not liable for any indirect or minimal harm arising from simulated data exposure. Direct breaches of real Student Data will be addressed according to FERPA and applicable laws.</p>
+    <p>The Service is provided "as is" for educational purposes. <strong>FERGUSON SOFTWARE SOLUTIONS</strong> makes no guarantees regarding grades, simulation outcomes, or academic results. While the Service employs robust security measures, <strong>FERGUSON SOFTWARE SOLUTIONS</strong> is not liable for any indirect or minimal harm arising from simulated data exposure. Direct breaches of real Student Data will be addressed according to FERPA and applicable laws.</p>
   </section>
 
   <section>
     <h2>9. Termination</h2>
-    <p>Trinity Capital may suspend or terminate access for any user violating these Terms. Schools may terminate their account at any time; upon termination, Trinity Capital will return or securely delete
+    <p><strong>FERGUSON SOFTWARE SOLUTIONS</strong> may suspend or terminate access for any user violating these Terms. Schools may terminate their account at any time; upon termination, Student Data will be returned to the School or securely deleted according to district instructions.</p>
+  </section>
+
+  <section>
+    <h2>10. Changes to Terms</h2>
+    <p><strong>FERGUSON SOFTWARE SOLUTIONS</strong> may update these Terms from time to time. Schools and users will be notified of significant changes and continued use of the Service constitutes acceptance of updated Terms.</p>
+  </section>
+
+  <section>
+    <h2>11. Governing Law</h2>
+    <p>These Terms are governed by the laws of the State of Texas, United States. Any disputes will be resolved in the appropriate state or federal courts located in Texas.</p>
+  </section>
+
+  <section>
+    <h2>12. Contact Information</h2>
+    <p>Questions regarding these Terms or the Service may be directed to:</p>
+    <p><strong>FERGUSON SOFTWARE SOLUTIONS</strong><br>
+    Email: <a href="mailto:trinitycapitalsim@gmail.com">Jakob Ferguson - Owner/Operator, FERGUSON SOFTWARE SOLUTIONS, LLC</a></p>
+  </section>
+
+</body>
+</html>
