--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy - Trinity Capital EdTech</title>
+  <title>Privacy Policy - Trinity Capital</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -37,14 +37,14 @@
 
   <section>
     <h2>1. Introduction</h2>
-    <p>Trinity Capital (“we,” “our,” or “the Service”) is committed to protecting the privacy and security of the students and schools that use our educational platform. This Privacy Policy explains how we collect, store, and use Student Data, and the measures we take to safeguard it.</p>
+    <p><strong>FERGUSON SOFTWARE SOLUTIONS</strong> (“we,” “our,” or “us”) is committed to protecting the privacy and security of the students and schools that use our educational software, <strong>Trinity Capital</strong> (the "Service"). This Privacy Policy explains how we collect, store, and use Student Data, and the measures we take to safeguard it.</p>
   </section>
 
   <section>
     <h2>2. Definitions</h2>
     <p>For the purposes of this Privacy Policy:</p>
     <ul>
-      <li><strong>Student Data:</strong> Information directly related to a student maintained by the Service on behalf of a School, including names, grades, lesson progress, and simulated financial data such as accounts, transactions, paychecks, bills, and budgets.</li>
+      <li><strong>Student Data:</strong> Information directly related to a student maintained by <strong>FERGUSON SOFTWARE SOLUTIONS</strong> on behalf of a School, including names, grades, lesson progress, and simulated financial data such as accounts, transactions, paychecks, bills, and budgets.</li>
       <li><strong>School:</strong> Any public school, district, or educational institution authorized to use the Service.</li>
       <li><strong>Teacher/Administrator:</strong> School personnel authorized to manage classes and students within the Service.</li>
     </ul>
@@ -110,7 +110,7 @@
 
   <section>
     <h2>9. Breach Notification</h2>
-    <p>In the unlikely event of a confirmed data breach, Trinity Capital will promptly notify the affected School in accordance with FERPA, Texas law, and applicable regulations, typically within 48 hours of discovery.</p>
+    <p>In the unlikely event of a confirmed data breach, <strong>FERGUSON SOFTWARE SOLUTIONS</strong> will promptly notify the affected School in accordance with FERPA, Texas law, and applicable regulations, typically within 48 hours of discovery.</p>
   </section>
 
   <section>
@@ -121,8 +121,8 @@
   <section>
     <h2>11. Contact Us</h2>
     <p>If you have questions or concerns about this Privacy Policy or Student Data, please contact:</p>
-    <p><strong>Trinity Capital</strong><br>
-    Email: <a href="mailto:support@trinity-capital.net">support@trinity-capital.net</a></p>
+    <p><strong>FERGUSON SOFTWARE SOLUTIONS</strong><br>
+    Email: <a href="mailto:trinitycapitalsim@gmail.com">Jakob Ferguson, Owner/Operator, FERGUSON SOFTWARE SOLUTIONS</a></p>
   </section>
 
 </body>
